# Modelado-Y-Simulacion-rover-pick-and-place

./: README.md  plot.py
rosbag2_2026_05_07-16_43_20/: metadata.yaml
src/msr_robot/: CMakeLists.txt  package.xml  untitled.blend
src/msr_robot/config/: rover_bridge.yaml  rover_controllers.yaml
src/msr_robot/launch/: robot.launch.py  robot_controller.launch.py  robot_gazebo.launch.py  robot_state_publisher.launch.py
src/msr_robot/meshes/dae/: Cube.011.dae  Cube.012.dae  Cube.dae  Cylinder.001.dae  Cylinder.002.dae  Cylinder.003.dae  Cylinder.004.dae  Cylinder.005.dae  Cylinder.006.dae  Cylinder.007.dae  Cylinder.008.dae  Cylinder.013.dae  Cylinder.016.dae  Torus.001.dae  Torus.002.dae  Torus.003.dae  Torus.004.dae  Torus.005.dae  Torus.dae
src/msr_robot/robots/: robot.urdf.xacro
src/msr_robot/urdf/: cube1.urdf  ros2_control.urdf.xacro  rover.urdf
src/msr_robot/urdf/arm/: scara.urdf.xacro
src/msr_robot/urdf/base/: robot_base.urdf.xacro
src/msr_robot/urdf/sensors/: camera.urdf.xacro  imu_sensor.urdf.xacro
src/msr_robot/urdf/wheels/: rover_wheel.urdf.xacro
src/rover_moveit_config/: .setup_assistant  package.xml
src/rover_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  robot.ros2_control.xacro  robot.srdf  robot.urdf.xacro  ros2_controllers.yaml
